# GitScope

./: README.md  pyproject.toml
.github/: copilot-instructions.md
doc/: requirement.md  technology_design.md  ui_design.md
gitscope/: __init__.py  __main__.py
gitscope/assets/: __init__.py  app.js  report.css  report.js  style.css
gitscope/cli/: __init__.py  app.py
gitscope/core/: __init__.py
gitscope/core/analyzers/: __init__.py  branch.py  commit.py  common.py  contributor.py  file.py  repository.py  sections.py  timeline.py
gitscope/core/collectors/: __init__.py  repository.py
gitscope/core/git/: __init__.py  client.py  errors.py
gitscope/core/models/: __init__.py  domain.py  report.py
gitscope/core/services/: __init__.py  analysis.py  analysis_service.py  report_builder.py
gitscope/core/utils/: __init__.py  dates.py  errors.py  strings.py  time.py
gitscope/reporters/: html_reporter.py  json_reporter.py
gitscope/reporters/html/: __init__.py  writer.py
gitscope/reporters/json/: __init__.py  writer.py
gitscope/storage/: database.py  ingest.py  schema.py  store.py
gitscope/templates/: __init__.py  report.html.j2
tests/: conftest.py  test_cli.py  test_service.py
