[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "gitscope"
version = "0.1.0"
description = "Local-first Git repository analytics for developers and engineering teams."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "GitScope contributors" }
]
dependencies = [
  "jinja2>=3.1.4",
  "pydantic>=2.7.0,<3.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[project.scripts]
gitscope = "gitscope.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["gitscope"]

[tool.hatch.build.targets.wheel.force-include]
"gitscope/templates/report.html.j2" = "gitscope/templates/report.html.j2"
"gitscope/assets/style.css" = "gitscope/assets/style.css"
"gitscope/assets/app.js" = "gitscope/assets/app.js"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
