[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitscope"
version = "0.1.0"
description = "Local-first Git repository analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1,<4",
  "pydantic>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
gitscope = "gitscope.cli.app:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["gitscope*"]

[tool.setuptools.package-data]
gitscope = ["templates/*.j2", "assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
